--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -69,6 +69,8 @@
 \usepackage{float}
 \usepackage{graphicx}
 \usepackage{caption}
+\usepackage[table,usenames,dvipsnames]{xcolor}
+\usepackage{peanutgallery}
 %
 % If IEEEtran.cls has not been installed into the LaTeX system files,
 % manually specify the path to it like:
